tests/fixtures/invalid/unknown_const_ref.gcl
// Unknown constant reference: UNKNOWN is never declared
node x: Dimensionless = UNKNOWN + 1.0;
